src/objects/WorkOrderLineItem.object
<CustomObject>
    <fields>
        <fullName>ATA__c</fullName>
        <label>ATA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ATP_Check_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ATP Check Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountIDRelatedToAccountLocation__c</fullName>
        <description>The SAP Customer ID of the Account related to the Account Location.</description>
        <formula>AccountLocation__r.Apttus_Config2__AccountId__r.SAP_Customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID Related To Account Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountLocationCity__c</fullName>
        <description>This indicates the account location&apos;s city.</description>
        <formula>AccountLocation__r.Apttus_Config2__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountLocationCountry__c</fullName>
        <description>This indicates the country of the account location.</description>
        <formula>AccountLocation__r.Apttus_Config2__Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountLocationHouseNumber__c</fullName>
        <description>This indicates the house number of the account location.</description>
        <formula>AccountLocation__r.Shipping_House_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location House Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountLocationID__c</fullName>
        <label>Account Location ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountLocationPostalCode__c</fullName>
        <formula>AccountLocation__r.Apttus_Config2__PostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountLocationState__c</fullName>
        <description>This indicates the state of the account location.</description>
        <formula>AccountLocation__r.Apttus_Config2__State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountLocationStreet__c</fullName>
        <description>This indicates the shipping street of the account location.</description>
        <formula>AccountLocation__r.Shipping_Street_Only__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountNameRelatedToAccountLocation__c</fullName>
        <description>The account name of the account related to the account location.</description>
        <formula>AccountLocation__r.Apttus_Config2__AccountId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Related To Account Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Location_Name__c</fullName>
        <formula>AccountLocation__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>Action(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preventive Check</fullName>
                </value>
                <value>
                    <fullName>Boiler Descaled</fullName>
                </value>
                <value>
                    <fullName>Valves/Gaskets Replacement</fullName>
                </value>
                <value>
                    <fullName>Customer Instructed</fullName>
                </value>
                <value>
                    <fullName>Service Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActualDuration__c</fullName>
        <description>Actual duration of the job after done by engineer</description>
        <label>Actual Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualTravelTime__c</fullName>
        <description>Travel time spent on a task.</description>
        <label>Actual Travel Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AddOption__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[KTS-67: Sales Trigger] Rename label from Add Spare Part to Add Option</description>
        <label>Add Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AddPartsandMaterialsIntegration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>KTS-1715: Field used as flagging for sending required parts and service materials in Click</description>
        <label>Add Parts and Materials Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalDetails__c</fullName>
        <label>Additional Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AllowIngredientOrdering__c</fullName>
        <description>This field is used for Order Management Ingredient Order App. Any changes of this field will impact integration and functionality. So always align with the admin of the order management app.</description>
        <formula>OR(
ISBLANK(WorkOrder.Route_Number__c) &amp;&amp;
OR(
ISPICKVAL( WorkOrderType__c, &quot;S20&quot;),
ISPICKVAL( WorkOrderType__c, &quot;S25&quot;)) 
&amp;&amp;
OR(
ISPICKVAL( Status, &quot;Dispatched&quot;),
ISPICKVAL( Status, &quot;Received&quot;),
ISPICKVAL( Status, &quot;Travelling&quot;),
ISPICKVAL( Status, &quot;On Site&quot;),
ISPICKVAL( Status, &quot;Start Work&quot;),
ISPICKVAL( Status, &quot;Review Needed&quot;),
ISPICKVAL( Status, &quot;Completed&quot;)),


NOT(ISBLANK(WorkOrder.Route_Number__c)) &amp;&amp;
OR(
ISPICKVAL(WorkOrder.WorkOrderType__c, &quot;S20&quot;),
ISPICKVAL(WorkOrder.WorkOrderType__c, &quot;S25&quot;)) 
&amp;&amp;
OR(
ISPICKVAL(WorkOrder.Status, &quot;Dispatched&quot;),
ISPICKVAL(WorkOrder.Status, &quot;Received&quot;),
ISPICKVAL(WorkOrder.Status, &quot;Travelling&quot;),
ISPICKVAL(WorkOrder.Status, &quot;On Site&quot;),
ISPICKVAL(WorkOrder.Status, &quot;Start Work&quot;),
ISPICKVAL(WorkOrder.Status, &quot;Review Needed&quot;),
ISPICKVAL(WorkOrder.Status, &quot;Completed&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allow Ingredient Ordering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AlternativeMachine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternative Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>This indicates the area the machine needs to be placed.</description>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the Coffee Machine</description>
        <label>Asset Name</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Counter_Reading_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Counter Reading Data</label>
        <referenceTo>APTS_CounterReadingData__c</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Is_Linked_With_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Is Linked With Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Line_Get_Id__c</fullName>
        <formula>CASESAFEID(AssetLineItem__c)</formula>
        <label>Asset Line Get Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Name_ID__c</fullName>
        <label>Asset Name ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedToThirdParty__c</fullName>
        <description>This field indicates whether the executing engineer is from a third party.</description>
        <formula>OR(ISPICKVAL( ExecutingEngineer__r.UserProfile__c , &quot;Third Party Capacity&quot;),
ISPICKVAL( ExecutingEngineer__r.UserProfile__c , &quot;TS Resource&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Third Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment1__c</fullName>
        <label>Attachment1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment2__c</fullName>
        <label>Attachment2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AutomaticSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that task was scheduled automatically way.</description>
        <label>Automatic Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingWorkQuarters__c</fullName>
        <description>Number equivalent of the original Field used by Click.</description>
        <formula>VALUE(WorkQuarters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Filled automatically</inlineHelpText>
        <label>Billing WorkQuarters</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BoilerDescaled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boiler Descaled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BookAppointmentFinish__c</fullName>
        <label>Book Appointment Finish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BookAppointmentStart__c</fullName>
        <label>Book Appointment Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <description>This indicates the building the machine needs to be placed.</description>
        <label>Building</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <formula>IF( 
AccountLocation__r.Custom_Service_Hours__c, 
AccountLocation__r.Custom_Service_Hours_Description__c,


IF(
NOT(ISBLANK(TEXT(AccountLocation__r.Start_of_Business_Day__c))),
TEXT(AccountLocation__r.Start_of_Business_Day__c) + &apos; - &apos; + TEXT(AccountLocation__r.End_of_Business_Day__c) + &apos; - &apos; + TEXT(AccountLocation__r.Monday_Exception__c)
, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field indicates the calendar of the account location related to this task.</inlineHelpText>
        <label>Calendar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelationReason__c</fullName>
        <description>Indicates the reason for cancelation.</description>
        <label>Cancelation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CanceledDate__c</fullName>
        <label>Canceled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CannotAccommodateLargeTruck__c</fullName>
        <description>This indicates that the account location is not accessible with a large truck.</description>
        <formula>IF(AccountLocation__c != null, AccountLocation__r.Cannot_Accommodate_Large_Truck__c, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cannot Accommodate Large Truck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseID__c</fullName>
        <description>This indicates the case id of the related case.</description>
        <formula>CASESAFEID(Case__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <label>CaseNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSubType__c</fullName>
        <formula>TEXT(Case__r.SubType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case SubType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_External_Solution__c</fullName>
        <label>Case External Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_SignatureClosing__c</fullName>
        <formula>Case__r.SignatureClosing__c</formula>
        <label>Case SignatureClosing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_SignatureCountryWebAddress__c</fullName>
        <formula>Case__r.SignatureCountryWebAddress__c</formula>
        <label>Case SignatureCountryWebAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_SignatureDepartmentEmail__c</fullName>
        <formula>Case__r.SignatureDepartmentEmail__c</formula>
        <label>Case SignatureDepartmentEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_SignatureDepartmentPhone__c</fullName>
        <formula>Case__r.SignatureDepartmentPhone__c</formula>
        <label>Case SignatureDepartmentPhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_SignatureLegalEntity__c</fullName>
        <formula>Case__r.SignatureLegalEntity__c</formula>
        <label>Case SignatureLegalEntity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_SignatureTitle__c</fullName>
        <formula>Case__r.Signature_Title__c</formula>
        <label>Case SignatureTitle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to case object</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>WorkOrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickNotified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>//kts-2681 ALM 6699 Karen Hung
to mark if click is already notified</description>
        <label>Click Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClickReady__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to identify when a callout to ClickSoftware has to be done</description>
        <label>Click Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Click_Integration_Status__c</fullName>
        <label>Click Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                    <default>true</default>
                    <label>Initial</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Click_MessageID__c</fullName>
        <label>Click MessageID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Priority__c</fullName>
        <label>Click Priority</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoffeeRunsAfterVisit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TS: Indicates that the coffee run after the job was performed.</description>
        <label>Coffee Runs After Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoffeeRunsUponArrival__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coffee Runs Upon Arrival</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CollectCounters__c</fullName>
        <description>This field indicates if the counters need to be collected upon a de-installation request.</description>
        <formula>IF(
ISPICKVAL( WorkOrderType__c , &quot;S41&quot;) &amp;&amp;
ISPICKVAL( PhysicalAsset__r.Connected__c , &quot;No&quot;) &amp;&amp;
ISPICKVAL( PhysicalAsset__r.CounterReading__c, &quot;Yes&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collect Counters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommentMissing__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercialMachine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates whether the machine will be used for commercial activities in order to make money.</description>
        <label>Commercial Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommercialNote__c</fullName>
        <description>Opportunity found description</description>
        <label>Opportunity Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletionCode__c</fullName>
        <description>Completion code of success or not success</description>
        <label>Completion Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100</fullName>
                    <label>100 - Completed, At Location</label>
                </value>
                <value>
                    <fullName>110</fullName>
                    <label>110 - Not Completed, No Parts</label>
                </value>
                <value>
                    <fullName>120</fullName>
                    <label>120 - Completed, No Problem Found</label>
                </value>
                <value>
                    <fullName>130</fullName>
                    <label>130 - Completed, Wrong Treatment Cust.</label>
                </value>
                <value>
                    <fullName>140</fullName>
                    <label>140 – Completed, Fixed By Phone</label>
                </value>
                <value>
                    <fullName>150</fullName>
                    <label>150 - Not Completed, Too Expensive</label>
                </value>
                <value>
                    <fullName>160</fullName>
                    <label>160 - Completed, Customer Request</label>
                </value>
                <value>
                    <fullName>170</fullName>
                    <label>170 - Not Completed, Int. Spec. Req.</label>
                </value>
                <value>
                    <fullName>180</fullName>
                    <label>180 - Not Completed, Ext. Spec. Req.</label>
                </value>
                <value>
                    <fullName>190</fullName>
                    <label>190 - Not Completed, Cust. Not Present</label>
                </value>
                <value>
                    <fullName>200</fullName>
                    <label>200 - Install Not Completed, Fault JDEP</label>
                </value>
                <value>
                    <fullName>210</fullName>
                    <label>210 - Install Not Completed, Due Cust.</label>
                </value>
                <value>
                    <fullName>220</fullName>
                    <label>220 - Install completed with flaw</label>
                </value>
                <value>
                    <fullName>230</fullName>
                    <label>230 - Completed, Wrong Treatment Operator</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompletionNoteType__c</fullName>
        <description>Type of note: internal / external</description>
        <label>Completion Note Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompletionNote__c</fullName>
        <description>Text of the note</description>
        <label>Completion Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigurationChangeRequest__c</fullName>
        <description>[KTS-1475]: Field used to indicate if the request is for removal or add of option</description>
        <label>Configuration Change Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConfigurationDateS43__c</fullName>
        <label>Configuration Date S43</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConfigurationFileURL__c</fullName>
        <description>This indicates the installation file for the button and recipe configuration.</description>
        <label>Configuration File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ConfigurationManualAgreementsURL__c</fullName>
        <description>This indicates the installation agreements for the button and recipe configuration if there is no specific installation file.</description>
        <label>Configuration Manual &amp; Agreements URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Confirmation__c</fullName>
        <defaultValue>&quot;Are you sure you want to re-trigger Click?&quot;</defaultValue>
        <label>Confirmation:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectivityModuleSerialNumber__c</fullName>
        <label>Connectivity System Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <description>This is the email of the contact related to the case.</description>
        <formula>IF(ISPICKVAL(WorkOrderType__c, &apos;S20&apos;),WorkOrder.Main_Service_Contact__r.Email, Case__r.Contact.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFirstName__c</fullName>
        <description>This is the first name of the contact related to the case.</description>
        <formula>IF(ISPICKVAL(WorkOrderType__c, &apos;S20&apos;), WorkOrder.Main_Service_Contact__r.FirstName,Case__r.Contact.FirstName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactID__c</fullName>
        <description>The Contact ID of the related contact.</description>
        <formula>Case__r.Contact.Contact_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactLastName__c</fullName>
        <description>This is the last name of the contact related to the case.</description>
        <formula>IF(ISPICKVAL(WorkOrderType__c, &apos;S20&apos;), WorkOrder.Main_Service_Contact__r.LastName, Case__r.Contact.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <formula>ContactFirstName__c + &apos; &apos; +  ContactLastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <description>This is the phone of the contact related to the case.</description>
        <formula>IF(ISPICKVAL(WorkOrderType__c, &apos;S20&apos;) ,WorkOrder.Main_Service_Contact__r.Phone, Case__r.Contact.Phone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <formula>IF(ISPICKVAL(WorkOrderType__c, &apos;S20&apos;) , WorkOrder.Main_Service_Contact__r.MobilePhone, Case__r.Contact.MobilePhone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Salutation__c</fullName>
        <formula>Case__r.Salutation__c</formula>
        <label>Contact Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostEstimatePDFURL__c</fullName>
        <label>Cost Estimate PDF URL</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CounterMissingOnMachine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the  system expects a reading but the Counter is not configured on the Machine. The Operator has to indicate this so, it can be corrected in Salesforce/SAP HANA</description>
        <label>Counter Missing On Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CounterReading__c</fullName>
        <description>Counter reading recorded by field engineer</description>
        <label>Counter Reading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountersCollected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Counters Collected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CountersS10loaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CountersS10loaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TS: This field functions as a trigger for other processes.</description>
        <label>Created Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomAppointment__c</fullName>
        <description>This field indicates whether there is a custom appointment which indicates that either the appointment window is changed on request of the customer or an appointment is booked (which can be within the SLA or outside the SLA).</description>
        <formula>OR(
NOT(ISBLANK(BookAppointmentStart__c)),  
NOT(ISBLANK(EarliestAppointmentTime__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerInstructed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Instructed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerReference__c</fullName>
        <description>This indicates the customer reference for the machine.</description>
        <label>Customer Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSignedforWork__c</fullName>
        <description>Signature from Customer confirming the Quoting.</description>
        <label>Customer Signed for Work</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeInstall_NonJDEMachine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates whether a NonJDE machine needs to be de-installated prior to the installation of the machine.</description>
        <label>De-install Non-JDE Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeInstallationDateS41__c</fullName>
        <description>This field is used to calculate the de-installation date of any S41 job.</description>
        <label>De-Installation Date S41</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DefectCode__c</fullName>
        <description>Completion code of success or not success</description>
        <label>Defect Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T01</fullName>
                    <label>T01 – Worn Out</label>
                </value>
                <value>
                    <fullName>T02</fullName>
                    <label>T02 – Lime Scale</label>
                </value>
                <value>
                    <fullName>T03</fullName>
                    <label>T03 – Blocked</label>
                </value>
                <value>
                    <fullName>T04</fullName>
                    <label>T04 – Cut / Broken</label>
                </value>
                <value>
                    <fullName>T05</fullName>
                    <label>T05 – Kinked / Bent / Squeezed</label>
                </value>
                <value>
                    <fullName>T06</fullName>
                    <label>T06 – Corroded</label>
                </value>
                <value>
                    <fullName>T07</fullName>
                    <label>T07 – Sealing</label>
                </value>
                <value>
                    <fullName>T08</fullName>
                    <label>T08 – Wrong Mounting</label>
                </value>
                <value>
                    <fullName>T09</fullName>
                    <label>T09 – Wrong Treatment</label>
                </value>
                <value>
                    <fullName>T10</fullName>
                    <label>T10 – Vandalism / Theft</label>
                </value>
                <value>
                    <fullName>T11</fullName>
                    <label>T11 – Wrong Adjustment</label>
                </value>
                <value>
                    <fullName>T12</fullName>
                    <label>T12 – Electrical</label>
                </value>
                <value>
                    <fullName>T13</fullName>
                    <label>T13 – Bug / Old version sw</label>
                </value>
                <value>
                    <fullName>T14</fullName>
                    <label>T14 – Water / Mains Supply</label>
                </value>
                <value>
                    <fullName>T15</fullName>
                    <label>T15 – Connection / Network</label>
                </value>
                <value>
                    <fullName>T16</fullName>
                    <label>T16 – Quality Ingredients</label>
                </value>
                <value>
                    <fullName>T17</fullName>
                    <label>T17 – Customer Request</label>
                </value>
                <value>
                    <fullName>T18</fullName>
                    <label>T18 – Not Applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Id__c</fullName>
        <formula>OrderLineItem__r.APTS_SAP_Delivery_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DependentWOLIID__c</fullName>
        <formula>DependentWOLI__r.JDELineItemNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent WOLI ID</label>
        <type>Text</type>
    </fields>
</CustomObject>